objects/LAT_FiscalNoteDetail__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BonusPercentage__c</fullName>
        <label>Bonus Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BonusQuantity__c</fullName>
        <label>Bonus Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BottlePrice__c</fullName>
        <label>Bottle Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_EffectiveDelivery__c</fullName>
        <label>Effective Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_ExpectedDelivery__c</fullName>
        <label>Expected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_FiscalNoteDetailID__c</fullName>
        <externalId>true</externalId>
        <label>Fiscal Note Detail ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FiscalNote__c</fullName>
        <label>Fiscal Note</label>
        <referenceTo>LAT_FiscalNote__c</referenceTo>
        <relationshipLabel>Fiscal Note Details</relationshipLabel>
        <relationshipName>Fiscal_Note_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_IssueDate__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MeasurementUnit__c</fullName>
        <label>Measurement Unit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentCondition__c</fullName>
        <label>Payment Condition</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentTermDescription__c</fullName>
        <label>Payment Term (Description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Fiscal Note Details</relationshipLabel>
        <relationshipName>LAT_Fiscal_Note_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fiscal Note Details</relationshipLabel>
        <relationshipName>Fiscal_Note_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ShipmentDate__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_SkuCode__c</fullName>
        <description>This field contains the SKU code of the related product (ex: 6522).
ETL fills this field.</description>
        <label>SKU Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_SkuDescription__c</fullName>
        <label>SKU description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_TotalItemValue__c</fullName>
        <formula>LAT_Quantity__c * LAT_UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Item Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fiscal Note Detail</label>
    <listViews>
        <fullName>Brasil_Today</fullName>
        <columns>NAME</columns>
        <columns>LAT_FiscalNote__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_FiscalNoteDetail__c.LAT_BR_FND_Standard</value>
        </filters>
        <label>Brasil Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Note Details</pluralLabel>
    <recordTypes>
        <fullName>LAT_AR_FND_Standard</fullName>
        <active>true</active>
        <label>AR Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_FND_Standard</fullName>
        <active>true</active>
        <label>BR Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_UY_FND_Standard</fullName>
        <active>true</active>
        <label>UY Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>